# data_visualization_project_individual

./: .gitignore  README.md  pyproject.toml  requirements.txt
ETL_Pipline/: bostader.csv  platser.csv  priser.csv  sparade.csv
notebooks/: eda_Andreas.ipynb  eda_nasser.ipynb
src/data/: bostader.json  generate_data.py
streamlit_app/: app.py
streamlit_app/assets/js/: map.js
streamlit_app/assets/style/: app.css  home.css  map.css
streamlit_app/components/: charts.py  filter_bar.py  karta.py  kpi_cards.py  objekt_lista.py
streamlit_app/utils/: constants.py  helpers.py
streamlit_app/vyer/: home.py  karta_vy.py  statistik.py  statistik_vy.py
