[project]
name = "ux25-de25-projekt-group3"
version = "0.1.0"
description = "RightHome – Streamlit-dashboard för bostadsdata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
righthome = "streamlit_app.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"